# Authorship-Attribution-on-Short-Texts-in-Slovenian-Language

./: README.md  pyproject.toml  requirements.txt
aa_slovenian/dataset/huggingface/: helper.py
aa_slovenian/dataset/imdb1m/: config.py  config.yaml  helpers.py  main.py  preprocess.py  train_test_splitter.py
aa_slovenian/dataset/rtv_slo/: main.py  models.py  prepare_dataset.py
aa_slovenian/train/: trainer.py
