[tool.poetry]
name = "authorship-attribution-on-short-texts-in-slovenian-language"
version = "1.0.0"
description = "Authorship Attribution on Short Texts in Slovenian Language"
authors = ["Gregor Gabrovšek <33792369+gregorgabrovsek@users.noreply.github.com>"]
readme = "README.md"
packages = [{ include = "aa_slovenian" }]

[tool.poetry.dependencies]
alive-progress = "^3.1.4"
datasets = "^2.14.4"
evaluate = "^0.4.0"
huggingface-hub = "^0.16.4"
pandas = "^1.5.3"
pydantic = "^1.10.5"
python = "~3.10"
scikit-learn = "^1.3.0"
transformers = "^4.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
